[package]
name = "advent-of-code-2023"
authors = ["Alessandro Righi <info@alerighi.it>"]
description = "Framework to solve Advent of Code problems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.75"
clap = { version = "4.0.29", features = ["derive"] }
sscanf = "0.4.0"
